--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-library.books.action1=http://localhost:8090/available
-library.books.action2=http://localhost:8090/checked-out
+library.books.action1.url=http://localhost:8090/available
+library.books.action2.url=http://localhost:8090/checked-out
